--- a/clusters/demo/sources/echobot.yaml
+++ b/clusters/demo/sources/echobot.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 1m0s
   url: https://github.com/sngular/gitops-echobot.git
   ref:
-    tag: v0.1.1
+    semver: ">=0.1.0 <1.0.0"
   ignore: |
     # exclude all
     /*
